--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "d3": "^5.7.0",
+    "d3-timeseries": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
